tests/ui/impl-trait/nested-return-type3-tait3.stderr
error: opaque type `Traitable` does not satisfy its associated type bounds
  --> $DIR/nested-return-type3-tait3.rs:15:29
   |
LL |     type Assoc: Duh;
   |                 --- this associated type bound is unsatisfied for `impl Send`
...
LL | type Traitable = impl Trait<Assoc = impl Send>;
   |                             ^^^^^^^^^^^^^^^^^
   |
help: add this bound
   |
LL | type Traitable = impl Trait<Assoc = impl Send + Duh>;
   |                                               +++++

error: aborting due to previous error

